# claude-todo

./: CHANGELOG.md  CLAUDE.md  COMMITS.md  FEASIBILITY.md  LICENSE  PLAN.md  README.md  TESTING.md  cliff.toml  index.html  package-lock.json  package.json
.claude/agents/: desktop-design.md
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.sh
src/: App.tsx  claude.test.ts  claude.ts  fileio.ts  notifications.test.ts  notifications.ts  storage.test.ts  storage.ts  styles.css  types.ts  windowmgmt.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  macmgmt.rs  main.rs  winmgmt.rs
